@@ -1,7 +1,7 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
     xmlns:browser="http://namespaces.zope.org/browser"
-    i18n_domain="tamedia.phonebook">
+    i18n_domain="ftw.file">
 
     <browser:page
         for="..interfaces.IFile"
