@@ -15,6 +15,8 @@ from Products.validation import V_REQUIRED
 from ZODB.POSException import ConflictError
 from zope.interface import implements
 from DateTime import DateTime
+from ftw.calendarwidget.browser.widgets import FtwCalendarWidget
+from Products.Archetypes.Widget import CalendarWidget
 
 
 FileSchema = ATFileSchema.copy() + atapi.Schema((
@@ -34,7 +36,15 @@ FileSchema = ATFileSchema.copy() + atapi.Schema((
             show_content_type=False,
         ),
     ),
-))
+    
+     atapi.DateTimeField(
+        'document_date',
+        required=False,
+        widget=FtwCalendarWidget(
+            label=_(u'label_document_date', default=u'Document Date'),
+            description=_(u'help_document_date', default=u'')),
+
+)))
 
 # Register BlobMarshaller for the marshall layer so it gets
 # used when de-marshalling files that are saved with the
@@ -48,16 +58,10 @@ if 'effectiveDate' in FileSchema.keys():
     FileSchema['effectiveDate'].widget.visible = {'view': 'visible',
                                                   'edit': 'visible'}
     FileSchema['effectiveDate'].schemata = 'default'
-    FileSchema['effectiveDate'].widget.description = _(
-        u'help_effective_date',
-        default=u"")
-    FileSchema['effectiveDate'].widget.label = _(
-        u'label_date',
-        default=u"")
 
     FileSchema['effectiveDate'].default_method = DateTime
     FileSchema['effectiveDate'].widget.show_hm = False
-
+    FileSchema['document_date'].widget.show_hm = False
 
 # clean up schemata, means: set manage portal as write permission
 schematas = ['categorization', 'dates', 'ownership', 'settings']
